# TALON

./: README.md  config.py  pyproject.toml  test.py  train.py
data/: cifar.py  cub.py  food.py  food101.py  imagenet.py  pets.py  scars.py
methods/talon/: model.py  trainer.py  utils.py
tools/: __init__.py  evaluate_utils.py  losses.py  train_utils.py
