[project]
name = "TALON"
version = "0.1.0"
description = "TALON"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "clip",
    "loguru>=0.7.3",
    "nvidia-ml-py>=13.590.48",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "tensorboard>=2.20.0",
    "timm>=1.0.24",
    "torch",
    "torchvision",
    "tqdm>=4.67.1",
    "typed-argument-parser>=1.11.0",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cu124" },
]
torchvision = [
    { index = "pytorch-cu124" },
]
clip = { git = "https://github.com/openai/CLIP.git" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

